--- a/Dockerfile-Maven
+++ b/Dockerfile-Maven
@@ -1,1 +1,5 @@
-FROM
+FROM maven:latest
+RUN apt install git -y
+WORKDIR /app
+RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
+RUN cd /app/boxfuse-sample-java-war-hello/ && mvn package
