--- a/Dockerfile-Maven
+++ b/Dockerfile-Maven
@@ -1,5 +1,6 @@
-FROM maven:latest
-RUN apt install git -y
+FROM alpine/git
 WORKDIR /app
 RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
+FROM maven:latest
+WORKDIR /app
 RUN cd /app/boxfuse-sample-java-war-hello/ && mvn package
