--- a/Dockerfile-Maven
+++ b/Dockerfile-Maven
@@ -1,6 +1,10 @@
-FROM alpine/git
+FROM ubuntu:20.04
+ENV TZ=Europe/Moscow
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+RUN apt update && apt dist-upgrade -y
+RUN apt install git -y
+RUN apt install default-jdk -y
+RUN apt install maven -y
 WORKDIR /app
 RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
-FROM maven:latest
-WORKDIR /app
-RUN cd /app/boxfuse-sample-java-war-hello/ && mvn package
+RUN cd /app/boxfuse-sample-java-war-hello && mvn package
