--- a/Dockerfile-Maven
+++ b/Dockerfile-Maven
@@ -5,6 +5,6 @@ RUN apt update && apt dist-upgrade -y
 RUN apt install git -y
 RUN apt install default-jdk -y
 RUN apt install maven -y
-WORKDIR /app
 RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
-RUN cd /app/boxfuse-sample-java-war-hello && mvn package
+RUN cd /boxfuse-sample-java-war-hello && mvn package
+RUN cp -r /boxfuse-sample-java-war-hello/target/* /var/opt/
