--- a/Dockerfile-Maven
+++ b/Dockerfile-Maven
@@ -7,4 +7,5 @@ RUN apt install default-jdk -y
 RUN apt install maven -y
 RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
 RUN cd /boxfuse-sample-java-war-hello && mvn package
-RUN cp -r /boxfuse-sample-java-war-hello/target/* /var/opt/
+CP /boxfuse-sample-java-war-hello/target/* /home/ubuntu/DCMT_Shared
+# RUN cp -r /boxfuse-sample-java-war-hello/target/* /var/opt/
