--- a/Dockerfile-Tomcat
+++ b/Dockerfile-Tomcat
@@ -1,7 +1,4 @@
 FROM busybox:stable
-RUN JAVA_HOME=/Java/
-RUN PATH=$PATH:$HOME/bin:$JAVA_HOME/bin
-RUN export PATH
-RUN export JAVA_HOME
+apt install  default-jdk -y
 EXPOSE 8080
 ENTRYPOINT ["/tomcat/bin/catalina.sh", "run"]
