--- a/Dockerfile-Tomcat
+++ b/Dockerfile-Tomcat
@@ -2,4 +2,5 @@ FROM busybox:stable
 ENV JAVA_HOME /Java
 RUN export JAVA_HOME
 EXPOSE 8080
+RUN ls /Java
 ENTRYPOINT ["/tomcat/bin/catalina.sh", "run"]
