--- a/Dockerfile-Tomcat
+++ b/Dockerfile-Tomcat
@@ -1,5 +1,5 @@
 FROM busybox:stable
 ENV JAVA_HOME /tomcat/jdk-16
-RUN export JAVA_HOME
+ENV PATH ${PATH}:${JAVA_HOME}/bin
 EXPOSE 8080
 ENTRYPOINT ["/tomcat/bin/catalina.sh", "run"]
