--- a/Dockerfile-Tomcat
+++ b/Dockerfile-Tomcat
@@ -2,4 +2,5 @@ FROM busybox:stable
 ENV JAVA_HOME /tomcat/jdk-16
 ENV PATH ${PATH}:${JAVA_HOME}/bin
 EXPOSE 8080
+RUN ls /tomcat/jdk-16/bin/
 ENTRYPOINT ["/tomcat/bin/catalina.sh", "run"]
