--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
     links:
       - tomcat
   tomcat:
-    build: http://193.122.59.82:3000/petrovvitalik/Docker_Tomcat_Minimal/raw/master/Dockerfile-Tomcat
+    image: tomcat:9-alpine
     ports:
       - "8080:8080"
     volumes:
-      - data-volume:/tomcat/webapps/
+      - data-volume:/usr/local/tomcat/webapps/
 volumes:
   data-volume:
 # data-volume:/usr/local/tomcat/webapps/
