--- a/Dockerfile-Maven
+++ b/Dockerfile-Maven
@@ -8,3 +8,5 @@ RUN apt install maven -y
 RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
 RUN cd /boxfuse-sample-java-war-hello && mvn package
 RUN cp -r /boxfuse-sample-java-war-hello/target/* /var/opt/
+COPY /home/ubuntu/jdk /java
+COPY /home/ubuntu/apache-tomcat-9.0.45 /tomcat
