--- a/Dockerfile-Tomcat
+++ b/Dockerfile-Tomcat
@@ -2,5 +2,6 @@ FROM busybox:stable
 ENV JAVA_HOME /java
 ENV PATH ${PATH}:${JAVA_HOME}/bin
 RUN ls /java
+RUN ls /tomcat
 EXPOSE 8080
 ENTRYPOINT ["/tomcat/bin/catalina.sh", "run"]
