--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
 version: "3.9"
 
 services:
+
   maven:
     build: http://193.122.59.82:3000/petrovvitalik/Docker_Tomcat_Minimal/raw/master/Dockerfile-Maven
     volumes:
       - artifact-volume:/var/opt
     links:
       - tomcat
+
   tomcat:
-    image: tomcat:8-alpine
+    image: tomcat:latest
     ports:
       - "8080:8080"
     volumes:
       - artifact-volume:/usr/local/tomcat/webapps/
+
 volumes:
   artifact-volume:
-# data-volume:/usr/local/tomcat/webapps/
