--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - data:/usr/local/tomcat/webapps/
+      - data-volume:/usr/local/tomcat/webapps/
 
 volumes:
   data-volume:
